[package]
name = "gravinyon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = [ "derive" ] }
cgmath = "0.18.0"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
rand = "0.8.5"
rodio = "0.17.1"
wgpu = "0.16.1"
winit = "0.28.6"
